Changelog
=========

1.6.6 - Unreleased
------------------

- Fixed notices styles.
  [Vitaliy Podoba]


1.6.5 - December 5, 2012
------------------------

- New code for zimbra_get_tree_json view.
  [Jose Dinuncio]

- Do not allow to create rooms in which user has no permissions to participate.
  [Taras Melnychuk]

- Fixed rooms autosuggestion. (unescape room names)
  [Taras Melnychuk]

- Show 'Active rooms' list when new message is received.
  [Taras Melnychuk]

- Reset JOIN and FIND chat form fields after successful posts.
  [Vitaliy Podoba]

- Applied existing rooms autosuggestion list to JOIN room form.
  [Taras Melnychuk]

- Refactored Available Rooms into Active Rooms list.
  [Taras Melnychuk]

- Move add participants button in cloudchat to Rooms pane.
  [Taras Melnychuk]


1.6.4 - November 13, 2012
-------------------------

- Adjust css: Global navigation, inputs elem, content shadows.
  [Cesar Gonzalez]

- Change css&layout Action Menu, content, comment box. Fix invite overlay
  autocomplete.
  [Cesar Gonzalez]

- Add images (#5092)
  [Cesar Gonzalez]

- Modifies css&layout: Action Menu, content, comment box.(#5092)
  [Cesar Gonzalez]

- Modifies userdataschema.py to use collective.customizablePersonalizeForm.
  [Jose Dinuncio]

- Move images and styles to cloudcast package.
  [Vitaliy Podoba]


1.6.3 - October 24, 2012
------------------------

- Fix cloudcast gallery link styles.
  [Vitaliy Podoba]

- Modify userdataschema.py to use collective.customizablePersonalizeForm.
  [Jose Dinuncio]

- Update styles for CloudCast actions toolbar.
  [Vitaliy Podoba]

- Added styles for cloudcast message actions.
  [Taras Melnychuk]

- Customize validate_integrity.vpy* scripts to allow redirect from event
  subscribers. We need it to redirect to Cast Invite screen upon creation.
  [Vitaliy Podoba]


1.6.2 - September 25, 2012
--------------------------

- Hide cloud tag if user is anonymous.
  [Jose Dinuncio]

- Fixes event creation in root bug.
  [Jose Dinuncio]
