@@ -9,6 +9,7 @@
   <include package=".browser" />
   <include package=".portlets" />
   <include package=".upgrades" />
+  <include package=".form" />
   <include file="skins.zcml" />
   <include file="profiles.zcml" />
   <include file="implements.zcml" />
